2010-03-06  Marek Habersack  <mhabersack@novell.com>

	* CompilerCollection.cs: in the 4.0 profile, the latest C#
	standard is the compiler's default.

2008-10-09  Marek Habersack  <mhabersack@novell.com>

	* CompilerCollection.cs: use all the compiler information from
	config file when adding new CompilerInfo. Fixes bug #433802

2008-02-26  Marek Habersack  <mhabersack@novell.com>

	* CompilerResults.cs: Output can be set internally.

2008-02-10  Juraj Skripsky  <js@hotfeet.ch>

	* CodeGenerator.cs: Mark CurrentClass internal for NET_1_1.
	Add nested Visitor class and member. 
	GenerateExpression, GenerateStatement, GenerateType: Use visitor.
	GeneratePrimitiveExpression: Replace if-else chain with switch
	on TypeCode. 

2008-01-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeGenerator.cs: Fixed ArgumentException argument names. Indent
	expression list.

2007-12-15  Marek Habersack  <mhabersack@novell.com>

	* Compiler.cs: added support for the default collection of
	<providerOption> child elements and corresponding public
	properties (ProviderOptions and ProviderOptionsDictionary).

	* CompilerInfo.cs: added ProviderOptions dictionary, to hold
	values from the <providerOption> collection of the
	system.codeDom/compilers/compiler/ element.
	CodeDomProviderType throws an exception if the provider type
	cannot be found, as per MSDN.
	CreateProvider uses the new provider constructor which takes
	provider options dictionary as its parameter, if found in the
	provider type.

	* CompilerCollection.cs: compiler defaults are initialized using
	the provider options dictionary, with one option present -
	"CompilerVersion" set to "2.0".
	Two dictionaries to map languages and extensions to compiler
	information objects added.

	* CompilerProviderOption.cs: added - implements the
	<providerOption> element.

	* CompilerProviderOptionsCollection.cs: added - implements
	collection for the 2.0sp1 <providerOption> child element of the